infrastructure/services/spark/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: same-service
  namespace: spark-jobs
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              service: spark
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: same-service
  namespace: spark-history
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              service: spark
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: same-service
  namespace: spark-operator
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              service: spark
    - from:
        - ipBlock:
            cidr: 10.0.0.0/16
      ports:
        - protocol: TCP
          port: 9443
